edit projects description

--- a/public/index.html
+++ b/public/index.html
@@ -682,7 +682,7 @@
 									<div class="hover-mask-content text-center">
 
 										<h3 class="mb-10 text-bold">Todo List</h3>
-										<p class="">Create your own to-do list, add items, and check them off once they're done!</p>
+										<p class="">Create your own to-do list! Built with JS, Ember, HTML, and CSS. I also built the server using CandyCane.</p>
 
 									</div>
 
@@ -706,7 +706,7 @@
 									<div class="hover-mask-content text-center">
 
 										<h3 class="mb-10 text-bold">American Adventurer's Guild</h3>
-										<p class="">After registering, you can view a list of events and their prizes. After purchasing events, you are given clues to find the treasure.</p>
+										<p class="">This was final project, built using all the tools and skills I aquired.</p>
 
 									</div>
 
