--- a/public/index.html
+++ b/public/index.html
@@ -591,7 +591,7 @@
 							</figure>
 
 						</a>
-						<a href="https://github.com/C1rcuit-Br3aker/14-puppy-adoption" class="code-link">View Puppy Code</a>
+						<a href="https://github.com/C1rcuit-Br3aker/14-puppy-adoption" target="_blank" class="code-link">View Puppy Code</a>
 
 					</div>
 					<div class="grid-item cat-1">
@@ -616,7 +616,7 @@
 							</figure>
 
 						</a>
-						<a href="https://github.com/C1rcuit-Br3aker/13-marvel-profile" class="code-link">View Marvel Code</a>
+						<a href="https://github.com/C1rcuit-Br3aker/13-marvel-profile" target="_blank" class="code-link">View Marvel Code</a>
 
 					</div>
 					<div class="grid-item cat-2">
@@ -641,7 +641,7 @@
 							</figure>
 
 						</a>
-						<a href="https://github.com/C1rcuit-Br3aker/chatty" class="code-link">View Chatty Code</a>
+						<a href="https://github.com/C1rcuit-Br3aker/chatty" target="_blank" class="code-link">View Chatty Code</a>
 
 					</div>
 					<div class="grid-item cat-1">
@@ -666,7 +666,7 @@
 							</figure>
 
 						</a>
-						<a href="https://github.com/C1rcuit-Br3aker/11-etsy" class="code-link">View Etsy Code</a>
+						<a href="https://github.com/C1rcuit-Br3aker/11-etsy" class=" target="_blank"code-link">View Etsy Code</a>
 
 					</div>
 					<div class="grid-item cat-2">
@@ -691,7 +691,7 @@
 							</figure>
 
 						</a>
-							<a href="https://github.com/C1rcuit-Br3aker/todo-app-18" class="code-link">View Todo Code</a>
+							<a href="https://github.com/C1rcuit-Br3aker/todo-app-18" target="_blank" class="code-link">View Todo Code</a>
 					</div>
 					<div class="grid-item cat-1 cat-2">
 
@@ -715,7 +715,7 @@
 							</figure>
 
 						</a>
-						<a href="https://github.com/C1rcuit-Br3aker/american-adventurers-guild" class="code-link">View Guild Code</a>
+						<a href="https://github.com/C1rcuit-Br3aker/american-adventurers-guild" target="_blank" class="code-link">View Guild Code</a>
 
 					</div>
 
