fastload and refactor contact

--- a/public/index.html
+++ b/public/index.html
@@ -35,9 +35,9 @@
 		JS
 		=============================================== -->
 
-		<!--[if lt IE 9]>
+
 			<script src="assets/js/libs/respond.min.js"></script>
-		<![endif]-->
+
 
 		<script type="text/javascript" src="assets/js/libs/modernizr.min.js"></script>
 
@@ -728,15 +728,15 @@
 		<!-- ==============================================
 		CONTACT
 		=============================================== -->
-		<div id="contact" class="bg-image pt-160 pb-120 fixed-bg" style="background-image:url('assets/images/keyboard.jpg')">
+		<div id="contact" class="bg-image pt-160 pb-120 fixed-bg" style="background-image:url('/assets/images/phone.jpg')">
 
 			<div class="container">
 
 				<div class="row">
 
-					<div class="col-md-6 col-lg-5 col-md-offset-1">
+					<div class="col-md-6 col-lg-5 col-md-offset-1 shadow">
 
-						<h2 class="text-uppercase text-bold mb-40 scrolling-animation fade-up">Contact Me</h2>
+						<!-- <h2 class="text-uppercase text-bold mb-40 scrolling-animation fade-up">Contact Me</h2>
 
 						<form class="contact-form text-dark mb-120 scrolling-animation fade-up d1" action="assets/php/contact.php" method="post" novalidate>
 
@@ -762,14 +762,15 @@
 							<p class="form-error email-error"><i class="fa fa-exclamation-triangle"></i>Email looks invalid</p>
 							<p class="form-success"><i class="fa fa-check"></i>Your message has been sent</p>
 
-						</form>
+						</form> -->
 
 						<h2 class="text-uppercase text-bold mb-20 scrolling-animation fade-up">Contact Information</h2>
 
 						<div class="scrolling-animation fade-up d1">
+							<p>Chris Boone</p>
 							<p>Hermitage, TN 37076</p>
-							<p><a href="tel:615-852-6896" class="text-hover-color" alt="Dialer">(615) 852 - 6896</a></p>
-							<p><a href="mailto:chris@chrisboone.me" class="text-hover-color">chris@chrisboone.me</a></p>
+							<p><a href="tel:615-852-6896" class="text-hover-color" alt="Dialer"><span class="gap fa fa-phone"></span>(615) 852 - 6896</a></p>
+							<p><a href="mailto:chris@chrisboone.me" class="text-hover-color" alt="email"><span class="gap fa fa-envelope"></span>chris@chrisboone.me</a></p>
 						</div>
 
 					</div>
