update some wording

--- a/public/index.html
+++ b/public/index.html
@@ -118,7 +118,7 @@
 							<sup><i class="fa fa-quote-right fa-fw text-color"></i></sup>
 						</p>
 
-						<p class="text-2x"><em>You just have to be creative enough to find it.</em></p>
+						<p class="text-2x"><em>You just have to be creative and persitent enough to find it.</em></p>
 
 					</div>
 
@@ -145,8 +145,9 @@
 								<h2 class="text-lg">Who am I?</h2>
 								<h3 class="text-gray mb-40 text-color text-bold">Short Answer</h3>
 
-								<p>I am Chris Boone, a thirty-one year old designer from TN. I am a husband and father to two adventurous little human beings. After the birth of my second child, I began searching for a career where I could put my passion for creativity and my desire to always learn new things to good use. I completed The Iron Yard's Front-End Engineering course, learning web development through immersive, hands-on training.  I designed, developed and deployed responsive
-      					web appliactions using Ember, JavaScript, HTML, and CSS. We also worked in an Agile enviroment, using both GitHub and Trello, to collaborate on user stories, feature checklists, and  manage team workflow. </p>
+								<p>I am Chris Boone, a developer from TN. I am a husband and father to two adventurous little human beings. After the birth of my second child, I began searching for a career where I could put my passion for creativity and my desire to always learn new things to good use. I completed The Iron Yard's Front-End Engineering course, learning web development through immersive, hands-on training.  I designed, developed and deployed responsive
+      					web appliactions using Ember, JavaScript, HTML, and CSS. We also worked in an Agile enviroment, using both GitHub and Trello, to collaborate on user stories, feature checklists, and  manage team workflow.</p>
+								<p>Technology is constantly evolving industry. I want to grow and evolve with it.</p>
 							</div>
 
 						</div>
@@ -245,7 +246,7 @@
 
 									<div class="col-xs-12 col-sm-8 col-sm-offset-4 col-md-9 col-md-offset-3">
 
-										<p>Although I did not complete a degree while attending ITT Tech, it was my first real exposure to programming. I was exposed to C++ & Visual Basic as well as an intensive Excel class. We also dealt with UI and hardware.</p>
+										<p>I attended ITT Tech right after high school and discovered that I really enjoy programming. I learned some C++, Visual Basic as well as how to tear down and rebuild a computer from the ground up from both a hardware and UI standpoint.</p>
 
 									</div>
 
@@ -508,7 +509,7 @@
 
 						<h3 class="text-hover-color icon-hover-zoom-in-all"><span class="icon-inline icon-circle icon-sm icon-solid-color nml"><i class="fa fa-html5"></i></span>HTML & CSS</h3>
 
-						<p>We all know naming things is hard. Keeping it simple is the key. Once things are named properly in your code, manipulating them becomes easier. I am very comfortable working with HTML and CSS.</p>
+						<p>I like working with HTML and CSS. The projects I built at The Iron Yard went from screen shots or whiteboard drawings to functional, responsive applications. If you show me what you want it to look like, I can make it happen.</p>
 
 					</div>
 
@@ -516,7 +517,7 @@
 
 						<h3 class="text-hover-color icon-hover-zoom-in-all"><span class="icon-inline icon-circle icon-sm icon-solid-color nml"><i class="fa fa-optin-monster"></i></span>JavaScript</h3>
 
-						<p>JavaScript is a powerful and sometimes complicated language. Although I feel very comfortable working with JS, I know I still have a lot to learn.</p>
+						<p>JavaScript is a powerful and sometimes complicated language. I feel very comfortable working with JS and I want to discover and learn more.</p>
 
 					</div>
 
@@ -607,7 +608,7 @@
 									<div class="hover-mask-content text-center">
 
 										<h3 class="mb-10 text-bold">Marvel</h3>
-										<p class="">My first interaction with an API</p>
+										<p class="">All the images and the majority of the text is pulled from Marvel's API. This was my first API interaction.</p>
 
 									</div>
 
@@ -632,7 +633,7 @@
 									<div class="hover-mask-content text-center">
 
 										<h3 class="mb-10 text-bold">Chatroom</h3>
-										<p class="">Register, then log-in to view the message room. Not every student completed this assignment.</p>
+										<p class="">This is a chatroom I built. I was given full creative control over all the design aspects!</p>
 
 									</div>
 
@@ -657,7 +658,7 @@
 									<div class="hover-mask-content text-center">
 
 										<h3 class="mb-10 text-bold">Etsy Search Clone</h3>
-										<p class="">A full recreation of Etsy with working search-bar.</p>
+										<p class="">This is a clone of the Etsy search page. The search bar is functional and the product items come straight from Etsy.b</p>
 
 									</div>
 
