moar wording updates

--- a/public/index.html
+++ b/public/index.html
@@ -545,7 +545,8 @@
 				<div class="scrolling-animation fade-up">
 					<h2 class="text-lg text-center">My <span class="text-color">Portfolio</span></h2>
 					<hr class="hr-gray hr-center hr-sm hr-bold mb-20">
-					<p class="text-gray text-center mb-80">Here is a collection of some apps I've built.</p>
+					<p class="text-center mb-80">Here is a collection of some apps I've built.</p>
+					<p class="text-gray text-center mb-80">Please be patient if they are loading slowly. The free servers are not fastest.</p>
 				</div>
 			</div>
 
@@ -592,7 +593,7 @@
 							</figure>
 
 						</a>
-						<a href="https://github.com/C1rcuit-Br3aker/14-puppy-adoption" target="_blank" class="code-link">View Puppy Code</a>
+						<a href="https://github.com/C1rcuit-Br3aker/14-puppy-adoption" target="_blank" class="code-link">View Code</a>
 
 					</div>
 					<div class="grid-item cat-1">
@@ -617,7 +618,7 @@
 							</figure>
 
 						</a>
-						<a href="https://github.com/C1rcuit-Br3aker/13-marvel-profile" target="_blank" class="code-link">View Marvel Code</a>
+						<a href="https://github.com/C1rcuit-Br3aker/13-marvel-profile" target="_blank" class="code-link">View Code</a>
 
 					</div>
 					<div class="grid-item cat-2">
@@ -642,7 +643,7 @@
 							</figure>
 
 						</a>
-						<a href="https://github.com/C1rcuit-Br3aker/chatty" target="_blank" class="code-link">View Chatty Code</a>
+						<a href="https://github.com/C1rcuit-Br3aker/chatty" target="_blank" class="code-link">View Code</a>
 
 					</div>
 					<div class="grid-item cat-1">
@@ -667,7 +668,7 @@
 							</figure>
 
 						</a>
-						<a href="https://github.com/C1rcuit-Br3aker/11-etsy" class=" target="_blank"code-link">View Etsy Code</a>
+						<a href="https://github.com/C1rcuit-Br3aker/11-etsy" class=" target="_blank"code-link">View Code</a>
 
 					</div>
 					<div class="grid-item cat-2">
@@ -692,7 +693,7 @@
 							</figure>
 
 						</a>
-							<a href="https://github.com/C1rcuit-Br3aker/todo-app-18" target="_blank" class="code-link">View Todo Code</a>
+							<a href="https://github.com/C1rcuit-Br3aker/todo-app-18" target="_blank" class="code-link">View Code</a>
 					</div>
 					<div class="grid-item cat-1 cat-2">
 
@@ -716,7 +717,7 @@
 							</figure>
 
 						</a>
-						<a href="https://github.com/C1rcuit-Br3aker/american-adventurers-guild" target="_blank" class="code-link">View Guild Code</a>
+						<a href="https://github.com/C1rcuit-Br3aker/american-adventurers-guild" target="_blank" class="code-link">View Code</a>
 
 					</div>
 
