--- a/public/index.html
+++ b/public/index.html
@@ -382,75 +382,6 @@
 					<p class="text-gray text-center">I use my passion for problem solving to build responsive web applications.</p>
 				</div>
 
-				<!-- <div class="row mt-160">
-
-					<div class="col-lg-5 text-center mt-40 mb-40 scrolling-animation fade-left">
-
-						<h3 class="text-lg text-bold mb-10">Responsive Design</h3>
-						<h3 class="text-gray mb-40 text-color text-bold">Why</h3>
-
-						<p class="text-lg">
-							<sup><i class="fa fa-quote-left fa-fw text-gray"></i></sup>
-							Day by day, the number of devices, platforms, and browsers that need to work with your site grows. Responsive web design represents a fundamental shift in how we’ll build websites for the decade to come.
-							<sup><i class="fa fa-quote-right fa-fw text-gray"></i></sup>
-						</p>
-
-						<p class="text-gray text-right"><em>- Jeffrey Veen</em></p>
-
-					</div>
-
-					<div class="col-lg-7 scrolling-animation fade-left d1">
-
-						<div class="multiple-devices synchronized-sliders">
-
-							<div class="macbook-mockup single-device">
-
-								<img class="img-responsive img-center" src="assets/images/macbook-single.png" alt=""/>
-
-								<div class="macbook-mockup-content flexslider no-direction-nav no-bullet-nav effect-zoom" data-speed="2500">
-								  <ul class="slides">
-									<li>
-									  <img src="assets/images/aag.png" alt="" />
-									</li>
-									<li>
-									  <img src="assets/images/AAG.png" alt="" />
-									</li>
-									<li>
-									  <img src="assets/images/AAG.png" alt="" />
-									</li>
-								  </ul>
-								</div>
-								<a href="#desktop-modal" data-toggle="modal"><span style="top:-5%;left:10%;" class="poi">Click Me</span></a>
-							</div>
-
-
-							<div class="iphone-mockup single-device">
-
-								<img class="img-responsive img-center" src="assets/images/iphone-single.png" alt=""/>
-
-								<div class="iphone-mockup-content flexslider pause no-direction-nav no-bullet-nav effect-slide" data-speed="2500">
-									<ul class="slides">
-									<li>
-									  <img src="assets/images/aag.png" alt="" />
-									</li>
-									<li>
-									  <img src="assets/images/iphone-screen-2.jpg" alt="" />
-									</li>
-									<li>
-									  <img src="assets/images/aag.png" alt="" />
-									</li>
-									</ul>
-								</div>
-								<a href="#mobile-modal" data-toggle="modal"><span style="top:-8%;right:-15%;" class="poi delay-animation">Click Me</span></a>
-							</div>
-
-
-						</div>
-
-					</div>
-
-				</div> -->
-
 				<hr class="mt-80 mb-80"/>
 
 				<div class="pb-80 hidden-xs"></div>
@@ -573,7 +504,7 @@
 
 					<div class="grid-item cat-2">
 
-						<a href="http://boone-puppy.surge.sh" target="_blank">
+						<a href="puppies.html">
 
 							<figure class="hover-mask-parent img-hover-zoom">
 
@@ -598,7 +529,7 @@
 					</div>
 					<div class="grid-item cat-1">
 
-						<a href="http://boone-marvel.surge.sh" target="_blank">
+						<a href="marvel.html">
 
 							<figure class="hover-mask-parent img-hover-zoom">
 
@@ -623,7 +554,7 @@
 					</div>
 					<div class="grid-item cat-2">
 
-						<a href="http://boone-chatty.surge.sh" target="_blank">
+						<a href="chatty.html">
 
 							<figure class="hover-mask-parent img-hover-zoom">
 
@@ -648,7 +579,7 @@
 					</div>
 					<div class="grid-item cat-1">
 
-						<a href="http://boone-etsy.surge.sh" target="_blank">
+						<a href="etsy.html">
 
 							<figure class="hover-mask-parent img-hover-zoom">
 
@@ -673,7 +604,7 @@
 					</div>
 					<div class="grid-item cat-2">
 
-						<a href="http://boone-todo.surge.sh" target="_blank">
+						<a href="todo.html">
 
 							<figure class="hover-mask-parent img-hover-zoom">
 
@@ -697,7 +628,7 @@
 					</div>
 					<div class="grid-item cat-1 cat-2">
 
-						<a href="https://american-adventurers.surge.sh" target="_blank">
+						<a href="guild.html">
 
 							<figure class="hover-mask-parent img-hover-zoom">
 
@@ -766,7 +697,7 @@
 
 						</form> -->
 
-						<h2 class="text-uppercase text-bold mb-20 scrolling-animation fade-up">Contact Information</h2>
+						<h2 class="text-uppercase text-color text-bold mb-20 scrolling-animation fade-up">Contact Information</h2>
 
 						<div class="scrolling-animation fade-up d1">
 							<p>Chris Boone</p>
@@ -830,56 +761,13 @@
 
 				<div class="container text-gray text-center">
 
-					<p class="mb-20 mt-20">made in 2016 | Special thanks to <a href="https://theironyard.com" class="text-hover-color" target="_blank">The Iron Yard</a></p>
+					<p class="mb-20 mt-20">2016 | Special thanks to <a href="https://theironyard.com" class="text-hover-color" target="_blank">The Iron Yard</a></p>
 
 				</div>
 
 			</div>
 
 		</footer>
-
-		<!-- ==============================================
-		MODALS
-		=============================================== -->
-		<div id="desktop-modal" class="modal fade">
-
-			<span class="close-modal" data-dismiss="modal">&times;</span>
-
-			<div class="modal-dialog">
-
-				<div class="modal-content text-center">
-
-					<h2 class="mb-10">Desktop devices</h2>
-					<h4 class="mb-40">Full Experience</h4>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean vestibulum vehicula condimentum. Praesent iaculis mauris dolor, eu eleifend orci mollis quis. Aenean aliquam velit nec interdum ullamcorper. Vestibulum eget urna vel ipsum sodales porttitor et nec libero.</p>
-
-					<a href="#portfolio" class="btn mt-40 btn-border btn-i-right scrollto" data-dismiss="modal">View Porftolio<i class="fa fa-arrow-down fa-lg"></i></a>
-
-				</div>
-
-			</div>
-
-		</div>
-
-		<div id="mobile-modal" class="modal fade">
-
-			<span class="close-modal" data-dismiss="modal">&times;</span>
-
-			<div class="modal-dialog">
-
-				<div class="modal-content text-center">
-
-					<h2 class="mb-10">Mobile devices</h2>
-					<h4 class="mb-40">In your hands</h4>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean vestibulum vehicula condimentum. Praesent iaculis mauris dolor, eu eleifend orci mollis quis. Aenean aliquam velit nec interdum ullamcorper. Vestibulum eget urna vel ipsum sodales porttitor et nec libero.</p>
-
-					<a href="#portfolio" class="btn mt-40 btn-border btn-i-right scrollto" data-dismiss="modal">View Porftolio<i class="fa fa-arrow-down fa-lg"></i></a>
-
-				</div>
-
-			</div>
-
-		</div>
 
 		<!-- ==============================================
 		SCRIPTS
@@ -896,7 +784,6 @@
 		<script src="assets/js/jquery.countTo.js"></script>
 		<script src="assets/js/isotope.pkgd.min.js"></script>
 		<script src="assets/js/jquery.stellar.min.js"></script>
-		<script src="assets/js/twitterFetcher_v10_min.js"></script>
 		<script src="assets/js/jquery.nicescroll.min.js"></script>
 		<script src="assets/js/jquery.waypoints.min.js"></script>
 		<script src="assets/js/scripts.js"></script>
