--- a/public/chatty.html
+++ b/public/chatty.html
@@ -324,7 +324,7 @@
 
 				<div class="container text-gray text-center">
 
-					<p class="mb-20 mt-20">made in 2016 | Special thanks to <a href="https://theironyard.com" class="text-hover-color" target="_blank">The Iron Yard</a></p>
+					<p class="mb-20 mt-20">2016 | Special thanks to <a href="https://theironyard.com" class="text-hover-color" target="_blank">The Iron Yard</a></p>
 
 				</div>
 
