fix spelling errors

--- a/public/index.html
+++ b/public/index.html
@@ -146,7 +146,7 @@
 								<h3 class="text-gray mb-40 text-color text-bold">Short Answer</h3>
 
 								<p>I am Chris Boone, a developer from TN. I am a husband and father to two adventurous little human beings. After the birth of my second child, I began searching for a career where I could put my passion for creativity and my desire to always learn new things to good use. I completed The Iron Yard's Front-End Engineering course, learning web development through immersive, hands-on training.  I designed, developed and deployed responsive
-      					web appliactions using Ember, JavaScript, HTML, and CSS. We also worked in an Agile enviroment, using both GitHub and Trello, to collaborate on user stories, feature checklists, and  manage team workflow.</p>
+      					web applications using Ember, JavaScript, HTML, and CSS. We also worked in an Agile environment, using both GitHub and Trello, to collaborate on user stories, feature checklists, and  manage team workflow.</p>
 								<p>Technology is constantly evolving industry. I want to grow and evolve with it.</p>
 							</div>
 
