no more twitter error + spellchecking

--- a/public/index.html
+++ b/public/index.html
@@ -590,7 +590,7 @@
 									<div class="hover-mask-content text-center">
 
 										<h3 class="mb-10 text-bold">Etsy Search Clone</h3>
-										<p class="">This is a clone of the Etsy search page. The search bar is functional and the product items come straight from Etsy.b</p>
+										<p class="">This is a clone of the Etsy search page. The search bar is functional and the product items come straight from Etsy.</p>
 
 									</div>
 
