move code button, refactor btn hover

--- a/public/chatty.html
+++ b/public/chatty.html
@@ -213,8 +213,9 @@
 						<p>It is built with JavaScript, Ember, HTML, and CSS. I had to set up a simple back end models using SLC Loopback. Messages are assigned a timestamp from the server. The chat window refeshes and auto scrolls to the bottom as a way of ensuring the latest messages are shown. Only 3 of my other classmates completed this assignment and it was fairly popular amongst us for a few days. Building a chatroom for the first time was an enjoyable challenge.</p>
 
 						<div class="text-center mt-80">
-							<a class="btn btn-lg btn-3d" href="http://boone-chatty.surge.sh" target="_blank">Visit Website
-							</a>
+							<a class="btn btn-lg btn-3d" href="http://boone-chatty.surge.sh" target="_blank">Visit Website</a>
+
+							<a class="btn btn-lg btn-3d mrg-l" href="https://github.com/C1rcuit-Br3aker/11-etsy" target="_blank">View Code</a>
 						</div>
 
 					</div>
