--- a/public/etsy.html
+++ b/public/etsy.html
@@ -165,8 +165,9 @@
 						<p>This project was very HTML and CSS intensive. CSS is used on the "results" items, but everything else is hard coded into the HTML and positioned with CSS. The search bar interacts with Etsy's API to fetch data, which then populates the items section.</p>
 
 						<div class="text-center mt-80">
-							<a class="btn btn-lg btn-3d" href="http://boone-etsy.surge.sh" target="_blank">Visit Website
-							</a>
+							<a class="btn btn-lg btn-3d" href="http://boone-etsy.surge.sh" target="_blank">Visit Website</a>
+
+							<a class="btn btn-lg btn-3d mrg-l" href="https://github.com/C1rcuit-Br3aker/11-etsy" target="_blank">View Code</a>
 						</div>
 
 					</div>
