--- a/public/guild.html
+++ b/public/guild.html
@@ -236,8 +236,9 @@
 						<p>This was my final project that was built using all the tools I learned at The Iron Yard. I worked on a team, collaborating to build the site from conception to the final product. We mapped and tracked our progress using Trello, setting daily and weekly goals over the course of 3 weeks. The main tools we used were HTML, CSS, JavaScript, and Ember. We also used Node, SLC Loopback to build an API, Ember addons like Ember Paper and Liquid Fire. We deployed the site using Surge.</p>
 
 						<div class="text-center mt-80">
-							<a class="btn btn-lg btn-3d" href="https://american-adventurers.surge.sh/" target="_blank">Visit Website
-							</a>
+							<a class="btn btn-lg btn-3d" href="https://american-adventurers.surge.sh/" target="_blank">Visit Website</a>
+
+							<a class="btn btn-lg btn-3d mrg-l" href="https://github.com/C1rcuit-Br3aker/american-adventurers-guild" target="_blank">View Code</a>
 						</div>
 
 					</div>
