--- a/public/marvel.html
+++ b/public/marvel.html
@@ -185,8 +185,9 @@
 						<p>All of the information on the site is fethed from Marvel's API. The only "hard coded" HTML is the header, footer, and sections titles. Everything else (images, names, titles, descritions) comes directly from Marvel's servers and is manipulated with CSS. We used a new (to us) way of formatting the divs around the images to get percectly centered, square images, without stretching. I plan on updating the site in the near future to allow users to navigate through different series and characters.</p>
 
 						<div class="text-center mt-80">
-							<a class="btn btn-lg btn-3d" href="http://boone-marvel.surge.sh" target="_blank">Visit Website
-							</a>
+							<a class="btn btn-lg btn-3d" href="http://boone-marvel.surge.sh" target="_blank">Visit Website</a>
+
+							<a class="btn btn-lg btn-3d mrg-l" href="https://github.com/C1rcuit-Br3aker/13-marvel-profile" target="_blank">View Code</a>
 						</div>
 
 					</div>
