--- a/public/puppies.html
+++ b/public/puppies.html
@@ -212,8 +212,9 @@
 						<p>This project built without a JavaScript framework. All the data creating and deleting is done with JavaScript. </p>
 
 						<div class="text-center mt-80">
-							<a class="btn btn-lg btn-3d" href="http://boone-puppy.surge.sh" target="_blank">Visit Website
-							</a>
+							<a class="btn btn-lg btn-3d" href="http://boone-puppy.surge.sh" target="_blank">Visit Website</a>
+
+							<a class="btn btn-lg btn-3d mrg-l" href="https://github.com/C1rcuit-Br3aker/14-puppy-adoption" target="_blank">View Code</a>
 						</div>
 
 					</div>
