--- a/public/todo.html
+++ b/public/todo.html
@@ -162,8 +162,9 @@
 						<p>This was one of the first Ember apps I built. I built a JSON API to support it using <a class="text-color" href="https://github.com/candycanejs/getting-started">CandyCane.js</a>. The list titles have hover effects so the user can tell which list is active. The list titles are scrollable and disappear behind the "Add List" button, so that the button is never overed up.</p>
 
 						<div class="text-center mt-80">
-							<a class="btn btn-lg btn-3d" href="http://boone-todo.surge.sh" target="_blank">Visit Website
-							</a>
+							<a class="btn btn-lg btn-3d" href="http://boone-todo.surge.sh" target="_blank">Visit Website</a>
+
+							<a class="btn btn-lg btn-3d mrg-l" href="https://github.com/C1rcuit-Br3aker/todo-app-18" target="_blank">View Code</a>
 						</div>
 
 					</div>
