--- a/public/etsy.html
+++ b/public/etsy.html
@@ -237,7 +237,7 @@
 										<p>Chris Boone</p>
 										<p>Hermitage, TN 37076</p>
 										<p><a href="tel:615-852-6896" class="text-hover-color" alt="Dialer"><span class="gap fa fa-phone"></span>(615) 852 - 6896</a></p>
-										<p><a href="mailto:chris@chrisboone.me" class="text-hover-color" alt="email"><span class="gap fa fa-envelope"></span>chris@chrisboone.me</a></p>
+										<p><a href="mailto:cboone1337@gmail.com" class="text-hover-color" alt="email"><span class="gap fa fa-envelope"></span>cboone1337@gmail.com</a></p>
 									</div>
 
 								</div>
