refactor favicon and footer links

--- a/public/puppies.html
+++ b/public/puppies.html
@@ -298,6 +298,7 @@
 
 					<ul class="list-inline list-unstyled list-gap-lg text-center mb-0">
 						<li><a href="https://github.com/C1rcuit-Br3aker" target="_blank" class="text-hover-color"><i class="fa fa-github-square fa-2x fa-fw"></i></a></li>
+						<li><a href="https://codepen.io/ChrisBoone/" target="_blank" class="text-hover-color"><i class="fa fa-codepen fa-2x fa-fw"></i></a></li>
 						<li><a href="https://www.linkedin.com/in/christopher-boone-a25899120" target="_blank" class="text-hover-color"><i class="fa fa-linkedin-square fa-2x fa-fw"></i></a></li>
 						<li><a href="https://www.reddit.com/user/The_Black_Joker/" target="_blank" class="text-hover-color"><i class="fa fa-reddit-alien fa-2x fa-fw"></i></a></li>
 						<li><a href="https://twitter.com/TheBlackJok3r" target="_blank" class="text-hover-color"><i class="fa fa-twitter-square fa-2x fa-fw"></i></a></li>
