--- a/public/index.html
+++ b/public/index.html
@@ -723,11 +723,13 @@
 
 							<div class="icon-box icon-box-round icon-top">
 
-								<span class="icon-inline icon-circle icon-solid-color"><i class="fa fa-linkedin-square"></i></span>
+								<a class="text-hover-color" href="https://codepen.io/ChrisBoone/" target="_blank">
+									<span class="icon-inline icon-circle icon-solid-color"><i class="fa fa-codepen"></i></span>
+								</a>
 
 								<div class="icon-box-content bg-dark">
 
-									<h4 class="mb-40"><em><a class="text-hover-color" href="https://www.linkedin.com/in/christopher-boone-a25899120" target="_blank">If you're reading this, connect with me on Linkedin by clicking on this text!</a></em></h4>
+									<h4 class="mb-40"><em><a class="text-hover-color" href="https://codepen.io/ChrisBoone/" target="_blank">Here is a link to my codepen! Some of the pens are just playing with porperties, like linear-gradient colors and CSS animations, to better understand how they work.</a></em></h4>
 
 									<div id="footer-twitter" class="twitter-slider flexslider dynamic-slides no-bullet-nav" data-widget-id="386017398488186880" data-tweets-length="3">
 									</div>
