--- a/public/index.html
+++ b/public/index.html
@@ -91,9 +91,9 @@
 			<div class="middle-align-content">
 				<div class="container text-center text-lg parallax-move-down">
 
-					<h2 class="text-lg scrolling-animation fade-down d2">This Guy</h2>
-					<h1 class="text-bold text-lg scrolling-animation scale-in">Chris Boone</h1>
-					<p class="text-lg scrolling-animation fade-up d2">always gives <span class="text-color">Maximum Effort</span></p>
+					<h2 class="text-lg scrolling-animation fade-down d2 shadow">This Guy</h2>
+					<h1 class="text-bold text-lg scrolling-animation scale-in shadow">Chris Boone</h1>
+					<p class="text-lg scrolling-animation fade-up d2 shadow">always gives <span class="text-color">Maximum Effort</span></p>
 
 				</div>
 			</div>
