change pics in resume to hexagons

--- a/public/index.html
+++ b/public/index.html
@@ -182,9 +182,15 @@
 
 								<h2 class="text-uppercase text-bold text-center mb-40 text-lg">My <span class="text-color">Education</span></h2>
 
-								<img class="img-responsive small-pic img-center img-circle mb-60" src="assets/images/teach.jpg" alt="" />
+								<div class="hex-item">
+									<div class="hexagon">
+										<div class="hexagon-in1">
+											<div class="hexagon-in2 edu"></div>
+										</div>
+									</div>
+								</div>
 
-								<div class="row">
+								<div class="row mrg-t">
 
 									<div class="col-xs-6 col-sm-4 col-md-3">
 
@@ -256,9 +262,15 @@
 
 							<h2 class="text-uppercase text-bold text-center mb-40 text-lg">Work <span class="text-color">Experience</span></h2>
 
-							<img class="img-responsive img-center img-circle mb-60" src="assets/images/working.jpg" alt="" />
+							<div class="hex-item">
+								<div class="hexagon">
+									<div class="hexagon-in1">
+										<div class="hexagon-in2 wrk"></div>
+									</div>
+								</div>
+							</div>
 
-							<div class="row">
+							<div class="row mrg-t">
 
 								<div class="col-xs-6 col-sm-4 col-md-3">
 
