change quote and sample images

--- a/public/index.html
+++ b/public/index.html
@@ -182,6 +182,7 @@
 
 								<h2 class="text-uppercase text-bold text-center mb-40 text-lg">My <span class="text-color">Education</span></h2>
 
+				<!-- I lifted the HTML for the hex images from my codepen and refactored the CSS to make it work here. It was NOT a part of the bootstrap template. There's a link to my codepen in the footer. -->
 								<div class="hex-item">
 									<div class="hexagon">
 										<div class="hexagon-in1">
@@ -403,11 +404,11 @@
 
 						<p class="text-lg">
 							<sup><i class="fa fa-quote-left fa-fw text-gray"></i></sup>
-							A great product experience starts with UX followed by UI. Both are essential for the product’s success.
+							Any product that needs a manual to work is broken.
 							<sup><i class="fa fa-quote-right fa-fw text-gray"></i></sup>
 						</p>
 
-						<p class="text-gray text-right"><em>- Rahul Varshney</em></p>
+						<p class="text-gray text-right"><em>- Elon Musk</em></p>
 
 					</div>
 
@@ -424,7 +425,7 @@
 									<!-- The before image is first -->
 									<img class="img-responsive" src="assets/images/code.png" alt="" />
 									<!-- The after image is last -->
-									<img class="img-responsive" src="assets/images/mac-thumb.jpg" alt="" />
+									<img class="img-responsive" src="assets/images/portfolio.png" alt="" />
 								</div>
 							</div>
 
