spellcheck and media query for small phone screen

--- a/public/index.html
+++ b/public/index.html
@@ -738,7 +738,7 @@
 
 								<div class="icon-box-content bg-dark">
 
-									<h4 class="mb-40"><em><a class="text-hover-color" href="https://codepen.io/ChrisBoone/" target="_blank">Here is a link to my codepen! Some of the pens are just playing with porperties, like linear-gradient colors and CSS animations, to better understand how they work.</a></em></h4>
+									<h4 class="mb-40"><em><a class="text-hover-color" href="https://codepen.io/ChrisBoone/" target="_blank">Here is a link to my codepen! Some of the pens are just playing with properties, like linear-gradient colors and CSS animations, to better understand how they work.</a></em></h4>
 
 									<div id="footer-twitter" class="twitter-slider flexslider dynamic-slides no-bullet-nav" data-widget-id="386017398488186880" data-tweets-length="3">
 									</div>
