--- a/public/index.html
+++ b/public/index.html
@@ -141,8 +141,13 @@
 								<h2 class="text-lg">Who am I?</h2>
 								<h3 class="text-gray mb-40 text-color text-bold">Short Answer</h3>
 
-								<p>I am Chris Boone, a developer from TN. I am a husband and father to two adventurous little human beings. After the birth of my second child, I began searching for a career where I could put my passion for creativity and my desire to always learn new things to good use. I completed The Iron Yard's Front-End Engineering course, learning web development through immersive, hands-on training.  I designed, developed and deployed responsive
+								<p>I am Chris Boone, a developer from TN. I am a husband and father to two adventurous little human beings. After the birth of my second child, I began searching for a career where I could put my passion for creativity and 
+								my desire to always learn new things to good use. I completed The Iron Yard's Front-End Engineering course, learning web development through immersive, hands-on training.  I designed, developed and deployed responsive
       					web applications using Ember, JavaScript, HTML, and CSS. We also worked in an Agile environment, using both GitHub and Trello, to collaborate on user stories, feature checklists, and  manage team workflow.</p>
+
+						  <p>Since 2016 I have been working as a Web Developer at QuaverEd, a company focused on childrens' education through music. I have helped build and maintain some of the largest and most frequenlty used applications. Myh primary
+							tools while working for QuaverEd are Dartlang and StageXL. Used together, they are the perfect solution for replacing a product that was built entirely in Flash.
+						</p>
 								<p>Technology is constantly evolving industry. I want to grow and evolve with it.</p>
 							</div>
 
@@ -267,6 +272,42 @@
 								</div>
 							</div>
 
+							<div class="row mrg-t">
+
+								<div class="col-xs-6 col-sm-4 col-md-3">
+
+									<div class="content-box content-box-sm bg-color">
+
+										<p class="mb-0 text-center">2016 - Present</p>
+
+									</div>
+
+								</div>
+
+								<div class="col-xs-12 col-sm-8 col-md-9">
+
+									<h3 class="mt-10 mb-0"><span class="text-uppercase">Senior Web Developer</span> - <a href="#link"><em class="text-gray text-hover-color ">QuaverEd Inc.</em></a></h3>
+
+								</div>
+
+							</div>
+
+							<hr class="hr-color mt-0 mb-40">
+
+							<div class="row mb-60">
+
+								<div class="col-xs-12 col-sm-8 col-sm-offset-4 col-md-9 col-md-offset-3">
+
+									<p>As a Senior Web Developer, I am responsible for helping to design, build, and maintain some of the most used applications on product website. I collaborate with the Content and Art teams and proive feedback
+										from a developer's perspective on the design and functionality. Once those are "finalized", I am responsible for building, testing, deploying, and maintaining the app as well as it's repository. Any custom tools created
+										for the app that may be of use to any other developer are added to an evergrowing internal library. The primarytapp for which I am responsible is thousands of lines of code, contains dozens of files, and is constantly being
+										updated with new features based on customer feedback.
+									</p>
+
+								</div>
+
+							</div>
+							
 							<div class="row mrg-t">
 
 								<div class="col-xs-6 col-sm-4 col-md-3">
@@ -454,6 +495,28 @@
 						<h3 class="text-hover-color icon-hover-zoom-in-all"><span class="icon-inline icon-circle icon-sm icon-solid-color nml"><i class="fa fa-optin-monster"></i></span>JavaScript</h3>
 
 						<p>JavaScript is a powerful and sometimes complicated language. I feel very comfortable working with JS and I want to discover and learn more.</p>
+
+					</div>
+
+					<div class="col-md-4 col-md-offset-0 col-sm-10 col-sm-offset-1 mb-40 scrolling-animation fade-left d2">
+
+						<h3 class="text-hover-color icon-hover-zoom-in-all"><span class="icon-inline icon-circle icon-sm icon-solid-color nml"><i class="fa fa-google"></i></span>Dartlang</h3>
+
+						<p>
+							Dart is a client-optimized language for fast apps on any platform. It is supported by Google and compiles to JS in the browser. Visually, if you're comfortable with JS, C#, Java or Typescript, you'll likely be able to jump right in
+							and have a very good idea of what's going on.
+						</p>
+
+					</div>
+
+					<div class="col-md-4 col-md-offset-0 col-sm-10 col-sm-offset-1 mb-40 scrolling-animation fade-left d2">
+
+						<h3 class="text-hover-color icon-hover-zoom-in-all"><span class="icon-inline icon-circle icon-sm icon-solid-color nml"><i class="fa fa-object-ungroup"></i></span>StageXL</h3>
+
+						<p>StageXL is a framework built to work with Dart to allow Flash developers convert their Flash projects to work in a non-flash environment. Using largely the same keywords and tools, it made transitioning from Flash easier.
+							Having never worked with Flash, it largely leverages the canvas element to allow for a wide variety of functionality in a web application. it can be used to make games, build an ordinary looking website, or jsut get creative
+							with some graphics to make a fancy slideshow of external applications hosted via an iframe.
+						</p>
 
 					</div>
 
@@ -700,8 +763,7 @@
 
 						<div class="scrolling-animation fade-up d1">
 							<p>Chris Boone</p>
-							<p>Hermitage, TN 37076</p>
-							<p><a href="tel:615-852-6896" class="text-hover-color" alt="Dialer"><span class="gap fa fa-phone"></span>(615) 852 - 6896</a></p>
+							<p>La Vergne, TN</p>
 							<p><a href="mailto:cboone1337@gmail.com" class="text-hover-color" alt="email"><span class="gap fa fa-envelope"></span>cboone1337@gmail.com</a></p>
 						</div>
 
@@ -751,7 +813,6 @@
 						<li><a href="https://github.com/C1rcuit-Br3aker" target="_blank" class="text-hover-color"><i class="fa fa-github-square fa-2x fa-fw"></i></a></li>
 						<li><a href="https://www.linkedin.com/in/christopher-boone-a25899120" target="_blank" class="text-hover-color"><i class="fa fa-linkedin-square fa-2x fa-fw"></i></a></li>
 						<li><a href="https://www.reddit.com/user/The_Black_Joker/" target="_blank" class="text-hover-color"><i class="fa fa-reddit-alien fa-2x fa-fw"></i></a></li>
-						<li><a href="https://twitter.com/TheBlackJok3r" target="_blank" class="text-hover-color"><i class="fa fa-twitter-square fa-2x fa-fw"></i></a></li>
 					</ul>
 
 				</div>
@@ -762,7 +823,7 @@
 
 				<div class="container text-gray text-center">
 
-					<p class="mb-20 mt-20">2016 | Special thanks to <a href="https://theironyard.com" class="text-hover-color" target="_blank">The Iron Yard</a></p>
+					<p class="mb-20 mt-20">2016 | Special thanks to The Iron Yard (RIP 2012-2017)</p>
 
 				</div>
 
