fix spacing issue in work experience

--- a/public/index.html
+++ b/public/index.html
@@ -308,7 +308,7 @@
 
 							</div>
 							
-							<div class="row mrg-t">
+							<div class="row">
 
 								<div class="col-xs-6 col-sm-4 col-md-3">
 
