--- a/fb-public/index.html
+++ b/fb-public/index.html
@@ -441,11 +441,11 @@
 
 						<p class="text-lg">
 							<sup><i class="fa fa-quote-left fa-fw text-gray"></i></sup>
-							Any product that needs a manual to work is broken.
+							Any sufficiently advanced technology is equivalent to magic.
 							<sup><i class="fa fa-quote-right fa-fw text-gray"></i></sup>
 						</p>
 
-						<p class="text-gray text-right"><em>- Elon Musk</em></p>
+						<p class="text-gray text-right"><em>- Arthur C. Clarke</em></p>
 
 					</div>
 
