fix spelling mistakes

--- a/fb-public/index.html
+++ b/fb-public/index.html
@@ -145,7 +145,7 @@
 								my desire to always learn new things to good use. I completed The Iron Yard's Front-End Engineering course, learning web development through immersive, hands-on training.  I designed, developed and deployed responsive
       					web applications using Ember, JavaScript, HTML, and CSS. We also worked in an Agile environment, using both GitHub and Trello, to collaborate on user stories, feature checklists, and  manage team workflow.</p>
 
-						  <p>Since 2016 I have been working as a Web Developer at QuaverEd, a company focused on childrens' education through music. I have helped build and maintain some of the largest and most frequenlty used applications. Myh primary
+						  <p>Since 2016 I have been working as a Web Developer at QuaverEd, a company focused on childrens education through music. I have helped build and maintain some of the largest and most frequenlty used applications. My primary
 							tools while working for QuaverEd are Dartlang and StageXL. Used together, they are the perfect solution for replacing a product that was built entirely in Flash.
 						</p>
 								<p>Technology is constantly evolving industry. I want to grow and evolve with it.</p>
