update puppy page and footer address

--- a/fb-public/guild.html
+++ b/fb-public/guild.html
@@ -317,7 +317,7 @@
 
 									<div class="scrolling-animation fade-up d1">
 										<p>Chris Boone</p>
-										<p>Hermitage, TN 37076</p>
+										<p>La Vergne, TN 37086</p>
 										<p><a href="tel:615-852-6896" class="text-hover-color" alt="Dialer"><span class="gap fa fa-phone"></span>(615) 852 - 6896</a></p>
 										<p><a href="mailto:cboone1337@gmail.com" class="text-hover-color" alt="email"><span class="gap fa fa-envelope"></span>cboone1337@gmail.com</a></p>
 									</div>
