--- a/fb-public/puppies.html
+++ b/fb-public/puppies.html
@@ -206,12 +206,14 @@
 
 						<p>This profile page for puppies allows the user to view, create, edit, and delete profile cards. Clicking the <span class="fa fa-plus-circle"></span> at the top of the page to view the submission card. You can use links to gifs or images for the photo! After submitting, you can edit or delete the profile as you see fit.</p>
 
-						<p>This project built without a JavaScript framework. All the data creating and deleting is done with JavaScript. </p>
+						<p>This project was originally built without a JavaScript framework as part of the Front End Engineering course at The Iron Yard. </p>
+						<p>It has been converted to Vue 3 with Pinia for state management. There are links to the Vue and JS code versions below.</p>
 
 						<div class="text-center mt-80">
-							<a class="btn btn-lg btn-3d" href="http://boone-puppy.surge.sh" target="_blank">Visit Website</a>
+							<a class="btn btn-lg btn-3d" href="https://vue-puppy.surge.sh/" target="_blank">Visit Website</a>
 
-							<a class="btn btn-lg btn-3d mrg-l" href="https://github.com/C1rcuit-Br3aker/14-puppy-adoption" target="_blank">View Code</a>
+							<a class="btn btn-lg btn-3d mrg-l" href="https://github.com/C1rcuit-Br3aker/Vue-PA" target="_blank">View Code</a>
+							<a class="btn btn-lg btn-3d mrg-l" href="https://github.com/C1rcuit-Br3aker/14-puppy-adoption" target="_blank">View Original JS Code</a>
 						</div>
 
 					</div>
@@ -234,22 +236,22 @@
 
 					<div class="col-sm-4 text-center text-hover-color icon-hover-rotate-30">
 
-						<span class="icon-inline icon-xl"><img class="fa tomster" src="assets/images/html5-logo.png"></span>
-						<h3 class="text-bold">HTML5</h3>
+						<span class="icon-inline icon-xl"><img class="fa tomster" src="assets/images/vue-logo.png"></span>
+						<h3 class="text-bold">Vue</h3>
 
 					</div>
 
 					<div class="col-sm-4 text-center text-hover-color icon-hover-rotate-30">
 
-						<span class="icon-inline icon-xl"><img class="fa tomster" src="assets/images/css3-logo.png"></span>
-						<h3 class="text-bold">CSS3</h3>
+						<span class="icon-inline icon-xl"><img class="fa tomster" src="assets/images/typescript-logo.jpg"></span>
+						<h3 class="text-bold">TypeScript</h3>
 
 					</div>
 
 					<div class="col-sm-4 text-center text-hover-color icon-hover-rotate-30">
 
-						<span class="icon-inline icon-xl"><img class="fa js-logo" src="assets/images/JS_logo.png"></span>
-						<h3 class="text-bold">JavaScript</h3>
+						<span class="icon-inline icon-xl"><img class="fa js-logo" src="assets/images/pinia-logo.png"></span>
+						<h3 class="text-bold">Pinia</h3>
 
 					</div>
 
@@ -280,8 +282,7 @@
 
 									<div class="scrolling-animation fade-up d1">
 										<p>Chris Boone</p>
-										<p>Hermitage, TN 37076</p>
-										<p><a href="tel:615-852-6896" class="text-hover-color" alt="Dialer"><span class="gap fa fa-phone"></span>(615) 852 - 6896</a></p>
+										<p>La Vergne, TN 37086</p>
 										<p><a href="mailto:cboone1337@gmail.com" class="text-hover-color" alt="email"><span class="gap fa fa-envelope"></span>cboone1337@gmail.com</a></p>
 									</div>
 
